--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
   "permissions": [ "activeTab" ],
-  "name": "http://altcraft.andrey.morozov.lan",
+  "name": "https://click.altcraft.andrey.morozov.lan",
   "display": "standalone"
 }
