--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,6 @@
     "activeTab"
   ],
   "short_name": "VSEM-SPASATb",
-  "name": "https://amorozovaltcraft.github.io/",
+  "name": "https://amorozovaltcraft.github.io",
   "display": "standalone"
 }
