--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "permissions": [ "activeTab" ],
+  "short_name": "VSEM-SPASATb",
   "name": "https://amorozovaltcraft.github.io",
   "display": "standalone"
 }
