--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,14 @@
 {
   "permissions": [ "activeTab" ],
-  "short_name": "VSEM-SPASATb",
+  "short_name": "VSEM-SPASATb-PWA",
   "name": "https://amorozovaltcraft.github.io",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "favicon.ico",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/ico"
     }
   ],
-  "short_name": "PWA",
   "theme_color": "#2196F3",
   "background_color": "#2196F3",
   "display": "standalone"
