--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
   "permissions": [ "activeTab" ],
-  "name": "https://examle.com",
+  "name": "https://alexander-zotov.dev.altkraft.com/resources/edit/new?next=%2Fresources&type=push",
   "display": "standalone"
 }
